[package]
name = "bar"
version = "0.1.0"
authors = ["rottedfm <rottedfm@proton.me>"]
license = "MIT"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
sysinfo = "0.32.0"
tokio = { version = "1.40.0", features = ["full"] }
